Fixed footer alignment

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6637,9 +6637,18 @@ th.hide-for-touch {
 /* line 1, ../sass/mystyles/_footer.scss */
 .footer {
   width: 100%;
-  background: white;
-  position: fixed; }
-  /* line 5, ../sass/mystyles/_footer.scss */
+  text-align: center;
+  position: fixed;
+  bottom: 0; }
+  /* line 6, ../sass/mystyles/_footer.scss */
   .footer ul {
-    margin: 0 auto;
-    vertical-align: middle; }
+    display: block;
+    width: 50%;
+    margin: 0 auto; }
+    /* line 10, ../sass/mystyles/_footer.scss */
+    .footer ul li {
+      margin: 0 auto;
+      vertical-align: middle;
+      display: inline-block;
+      list-style: none;
+      padding: 1rem; }
