--- a/public/sass/mystyles/_footer.scss
+++ b/public/sass/mystyles/_footer.scss
@@ -1,10 +1,19 @@
 .footer {
   width: 100%;
-  background: white;
+  text-align: center;
   position: fixed;
+  bottom: 0;
   ul {
+    display: block;
+    width: 50%;
     margin: 0 auto;
-    vertical-align: middle;
+    li {
+      margin: 0 auto;
+      vertical-align: middle;
+      display: inline-block;
+      list-style: none;
+      padding: 1rem;
+    }
   }
 }
 
